--- a/Dialogs/Dialogs.Android/Dialogs.Android.csproj
+++ b/Dialogs/Dialogs.Android/Dialogs.Android.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>1.0.4</Version>
+    </PackageReference>
     <PackageReference Include="Toasts.Forms.Plugin">
       <Version>3.3.0</Version>
     </PackageReference>
