--- a/Dialogs/Dialogs.UWP/Dialogs.UWP.csproj
+++ b/Dialogs/Dialogs.UWP/Dialogs.UWP.csproj
@@ -148,6 +148,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>1.0.4</Version>
+    </PackageReference>
     <PackageReference Include="Toasts.Forms.Plugin">
       <Version>3.3.0</Version>
     </PackageReference>
