--- a/Dialogs/Dialogs.iOS/Dialogs.iOS.csproj
+++ b/Dialogs/Dialogs.iOS/Dialogs.iOS.csproj
@@ -119,6 +119,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>1.0.4</Version>
+    </PackageReference>
     <PackageReference Include="Toasts.Forms.Plugin">
       <Version>3.3.0</Version>
     </PackageReference>
